# gcode2dplotterart

./: .env.sample  .gitignore  404.html  CONTRIBUTORS.md  DEV_NOTES.md  LICENSE  README.md  TODO.md  blog.html  bootstrap.sh  docstrings2md.py  docstrings2md.sh  docstrings2md2.py  index.html  markdown-page.html  mypy.ini  pyproject.toml  requirements-sandbox.txt  requirements.txt  sitemap.xml  test_plotter2d.py  test_plotter3d.py  test_tests.py  test_text.py  utils_test.py
assets/css/: styles.067209bc.css  styles.4a5c7217.css  styles.85e2ec8c.css  styles.9f3c54fb.css  styles.b54ed7d7.css
assets/images/: 1-6c9238bd6c42ae08c2372414e10715da.avif  1-bed6ac8e82a95961ebae176e0d3fa7a6.avif  2-60279abbc54d332798d3531fe80973ae.avif  example3-45bdfede071afaf87ab0700c1a09ba4c.avif
assets/js/: 0068c63b.23a43dbe.js  0068c63b.b2de8da8.js  0068c63b.eca4d6bb.js  06556ec8.60d62b51.js  080506de.034a978d.js  (+307 more)
blog/: archive.html  atom.xml  authors.html  first-blog-post.html  long-blog-post.html  mdx-blog-post.html  rss.xml  tags.html  welcome.html
docs/: .buildinfo  conf.py  gcode2dplotterart.html  genindex.html  index.html  index.rst  intro.html  objects.inv  plotter.rst  py-modindex.html  quickstart.html  releases.html  search.html  searchindex.js
examples/: sine_wave.py  sine_waves.py
gcode2dplotterart/: Image.py  InstructionWithArguments.py  Layer.py  Layer2D.py  Layer3D.py  Plotter.py  Plotter2D.py  Plotter3D.py  README.md  SimpleInstruction.py  _Layer.py  _Plotter.py  __init__.py  enums.py  experimental_cli.py  shared_types.py  types.py
gcode2dplotterart-website/: .eslintrc.json  .gitignore  README.md  docusaurus.config.js  package-lock.json  package.json  requirements.txt  sidebars.js
sandbox/: 3dlibtesting.py  README.md  cli.py  connect_lines.py  demo.py  diag_lines.py  labels.npy  main.py  main2d.py  main3d.py  plotting_preview.py  process_image.py  pyproject.toml  requirements.txt  sine.py
sandbox/dessins_geometriques/: dessin_22.py  dessin_32.py  dessin_33.py  dessin_84.py
sandbox/diag_lines_attempt_2/: process_photo_even_pixel_buckets.py
sandbox/diag_lines_original/: .gitignore  diag_lines.py  labels.npy  main3d.py  output.npz  process_image_nearest_color.py
sandbox/diag_lines_original/Diag Lines/: 0_preview.gcode  1_cyan.gcode  2_magenta.gcode  3_yellow.gcode  4_black.gcode
snapshots/: black.gcode
src/: sandbox.py
wip_photo_utils/: __init__.py  load.py  process.py
(+233 files in other folders)
