[build-system]
requires = ["setuptools>=68.2.2", "wheel>=0.41.3"]
build-backend = "setuptools.build_meta"

[project]
name = "gcode2dplotterart"
version = "0.1.0"
description = "A Python package for creating 2D and 3D plotter art using GCode"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
authors = [
    {name = "Travis Bumgarner", email = "travis.bumgarner@gmail.com"},
]
dependencies = [
    "matplotlib>=3.8.2",
    "typing_extensions>=4.12.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.14.1",
    "black>=24.10.0",
    "flake8>=7.1.1",
    "pytest>=8.3.4",
]

[tool.setuptools]
packages = ["gcode2dplotterart"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
incremental = true
files = "./gcode2dplotterart" 