[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcode2dplotterart"
version = "0.1.0"
authors = [
    { name = "Travis Bumgarner" },
]
description = "A Python library for creating 2D plotter art using GCode"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["gcode2dplotterart"] 