[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gcode2dplotterart"
version = "2.0.3"
authors = [
    { name = "Travis Bumgarner" },
]
description = "A Python library for creating 2D plotter art using GCode"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.8.2",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",  
    "typing-extensions>=4.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["gcode2dplotterart"]

[tool.hatch.build.targets.sdist]
packages = ["gcode2dplotterart"]
